--- a/script/Code.ipynb
+++ b/script/Code.ipynb
@@ -22,7 +22,7 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from data_preprocessing import MultiTransformOLIVESDataset  # Assuming the dataset code is in `data_preprocessing.py`\n",
+    "from data_preprocessing import MultiTransformOLIVESDataset,AddSaltPepperNoise, AddGaussianNoise ,AddRandomBrightnessContrast ,AddRandomRotation# Assuming the dataset code is in `data_preprocessing.py`\n",
     "from resnet50_mlp_fusion import SupCEResNet_Fusion  \n",
     "\n",
     "# Paths\n",
