--- a/script/Training.ipynb
+++ b/script/Training.ipynb
@@ -2,8 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "id": "f9ae9e79-98a6-4a60-9477-63894df0a0d9",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -28,9 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "id": "f894a774-f094-4c19-ad80-6f61313a2224",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hice1/cphan36/.local/lib/python3.10/site-packages/torch/optim/lr_scheduler.py:62: UserWarning: The verbose parameter is deprecated. Please use get_last_lr() to access the learning rate.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10 - Train Loss: 44.6945, Val Loss: 47.2235\n",
+      "Epoch 7/10 - Train Loss: 41.0312, Val Loss: 44.2377\n",
+      "Epoch 8/10 - Train Loss: 36.5389, Val Loss: 37.5902\n",
+      "Epoch 9/10 - Train Loss: 34.0994, Val Loss: 37.5623\n",
+      "Epoch 10/10 - Train Loss: 31.5153, Val Loss: 35.2049\n"
+     ]
+    }
+   ],
    "source": [
     "# Define model\n",
     "model = SupCEResNet_Fusion(\n",
@@ -53,16 +79,37 @@
     "    optimizer=optimizer,\n",
     "    device=DEVICE,\n",
     "    epochs=10  # Specify the number of epochs\n",
-    ")"
+    ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "823c4750-1824-4f86-9f76-46ae9bced902",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
