resnet model and data processing update

--- a/script/Training.ipynb
+++ b/script/Training.ipynb
@@ -20,10 +20,7 @@
     "from data_preprocessing import get_data_loaders\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "\n",
-    "# Paths\n",
-    "DATA_PATH = '/storage/ice1/shared/d-pace_community/makerspace-datasets/MEDICAL/OLIVES/OLIVES/'\n",
-    "LABEL_DATA_PATH = os.path.join(DATA_PATH, 'Biomarker_Clinical_Data_Images_Updated.csv')\n",
+    "from train import train_model\n",
     "\n",
     "# Device configuration\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
@@ -31,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f894a774-f094-4c19-ad80-6f61313a2224",
    "metadata": {
     "tags": []
@@ -49,11 +46,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6/10 - Train Loss: 44.6945, Val Loss: 47.2235\n",
-      "Epoch 7/10 - Train Loss: 41.0312, Val Loss: 44.2377\n",
-      "Epoch 8/10 - Train Loss: 36.5389, Val Loss: 37.5902\n",
-      "Epoch 9/10 - Train Loss: 34.0994, Val Loss: 37.5623\n",
-      "Epoch 10/10 - Train Loss: 31.5153, Val Loss: 35.2049\n"
+      "Epoch 1/10 - Train Loss: 375.3257, Val Loss: 27.0321\n",
+      "Epoch 2/10 - Train Loss: 20.4152, Val Loss: 12.3833\n",
+      "Epoch 3/10 - Train Loss: 11.6086, Val Loss: 8.9805\n",
+      "Epoch 4/10 - Train Loss: 8.4334, Val Loss: 6.9387\n",
+      "Epoch 5/10 - Train Loss: 6.5218, Val Loss: 6.0672\n",
+      "Epoch 6/10 - Train Loss: 5.6253, Val Loss: 4.4143\n",
+      "Epoch 7/10 - Train Loss: 4.6936, Val Loss: 5.5784\n",
+      "Epoch 8/10 - Train Loss: 3.4810, Val Loss: 3.8110\n",
+      "Epoch 9/10 - Train Loss: 3.7603, Val Loss: 2.6761\n",
+      "Epoch 10/10 - Train Loss: 3.1320, Val Loss: 4.1246\n"
      ]
     }
    ],
@@ -84,11 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "823c4750-1824-4f86-9f76-46ae9bced902",
-   "metadata": {},
+   "execution_count": 3,
+   "id": "987a2ec9-1f07-4e35-99d9-ce6896e828de",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.save(model, \"resnet50.pth\")"
+   ]
   }
  ],
  "metadata": {
