--- a/script/Training.ipynb
+++ b/script/Training.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f894a774-f094-4c19-ad80-6f61313a2224",
    "metadata": {
     "tags": []
@@ -38,21 +38,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/15 - Train Loss: 359.9339, Val Loss: 24.3332\n",
-      "Epoch 2/15 - Train Loss: 16.6890, Val Loss: 11.9235\n",
-      "Epoch 3/15 - Train Loss: 10.4118, Val Loss: 7.0489\n",
-      "Epoch 4/15 - Train Loss: 7.8965, Val Loss: 12.7425\n",
-      "Epoch 5/15 - Train Loss: 6.1411, Val Loss: 4.1106\n",
-      "Epoch 6/15 - Train Loss: 5.1072, Val Loss: 4.7286\n",
-      "Epoch 7/15 - Train Loss: 4.5260, Val Loss: 3.0286\n",
-      "Epoch 8/15 - Train Loss: 3.5107, Val Loss: 2.5087\n",
-      "Epoch 9/15 - Train Loss: 3.3327, Val Loss: 2.0824\n",
-      "Epoch 10/15 - Train Loss: 2.9979, Val Loss: 3.0033\n",
-      "Epoch 11/15 - Train Loss: 2.4394, Val Loss: 3.3278\n",
-      "Epoch 12/15 - Train Loss: 2.5987, Val Loss: 2.0882\n",
-      "Epoch 13/15 - Train Loss: 2.4252, Val Loss: 1.8262\n",
-      "Epoch 14/15 - Train Loss: 1.8684, Val Loss: 1.9394\n",
-      "Epoch 15/15 - Train Loss: 1.9153, Val Loss: 2.6739\n"
+      "Epoch 1/25 - Train Loss: 369.7980, Val Loss: 29.2666\n",
+      "Epoch 2/25 - Train Loss: 20.5238, Val Loss: 12.9883\n",
+      "Epoch 3/25 - Train Loss: 11.7768, Val Loss: 7.1341\n",
+      "Epoch 4/25 - Train Loss: 9.5466, Val Loss: 16.4650\n",
+      "Epoch 5/25 - Train Loss: 6.7382, Val Loss: 4.8012\n",
+      "Epoch 6/25 - Train Loss: 5.7743, Val Loss: 3.6027\n",
+      "Epoch 7/25 - Train Loss: 4.7440, Val Loss: 4.0405\n",
+      "Epoch 8/25 - Train Loss: 3.9068, Val Loss: 8.4294\n",
+      "Epoch 9/25 - Train Loss: 3.2630, Val Loss: 7.5906\n",
+      "Epoch 00010: reducing learning rate of group 0 to 1.0000e-05.\n",
+      "Epoch 10/25 - Train Loss: 3.8179, Val Loss: 3.7768\n",
+      "Epoch 11/25 - Train Loss: 1.6818, Val Loss: 1.2016\n",
+      "Epoch 12/25 - Train Loss: 1.1323, Val Loss: 1.0586\n",
+      "Epoch 13/25 - Train Loss: 0.9271, Val Loss: 0.9581\n",
+      "Epoch 14/25 - Train Loss: 0.8264, Val Loss: 0.8440\n",
+      "Epoch 15/25 - Train Loss: 0.7115, Val Loss: 0.7746\n",
+      "Epoch 16/25 - Train Loss: 0.6916, Val Loss: 0.7277\n",
+      "Epoch 17/25 - Train Loss: 0.5927, Val Loss: 0.5836\n",
+      "Epoch 18/25 - Train Loss: 0.5669, Val Loss: 0.5947\n",
+      "Epoch 19/25 - Train Loss: 0.5391, Val Loss: 0.6475\n",
+      "Epoch 20/25 - Train Loss: 0.4907, Val Loss: 0.4911\n",
+      "Epoch 21/25 - Train Loss: 0.4397, Val Loss: 0.5728\n",
+      "Epoch 22/25 - Train Loss: 0.4137, Val Loss: 0.5047\n",
+      "Epoch 23/25 - Train Loss: 0.3784, Val Loss: 0.4881\n",
+      "Epoch 24/25 - Train Loss: 0.3975, Val Loss: 0.4919\n",
+      "Epoch 25/25 - Train Loss: 0.3552, Val Loss: 0.5552\n"
      ]
     }
    ],
@@ -77,7 +88,7 @@
     "    criterion=criterion,\n",
     "    optimizer=optimizer,\n",
     "    device=DEVICE,\n",
-    "    epochs=15  # Specify the number of epochs\n",
+    "    epochs=25  # Specify the number of epochs\n",
     ")\n"
    ]
   },
