Additional split updates

--- a/script/Training.ipynb
+++ b/script/Training.ipynb
@@ -82,7 +82,7 @@
     "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
     "train_loader, test_loader, val_loader = get_data_loaders()\n",
     "# Train the model\n",
-    "train_losses, val_losses = train_model(\n",
+    "train_losses, test_losses = train_model(\n",
     "    model=model,\n",
     "    train_loader=train_loader,\n",
     "    test_loader=test_loader,\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f3e8f7a7",
    "metadata": {
     "scrolled": false
@@ -143,7 +143,7 @@
     "\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(epochs, train_losses, label=\"Training Loss\", color=\"blue\")\n",
-    "plt.plot(epochs, val_losses, label=\"Validation Loss\", color=\"red\")\n",
+    "plt.plot(epochs, test_losses, label=\"Test Loss\", color=\"red\")\n",
     "plt.title(\"Loss over Epochs\")\n",
     "plt.xlabel(\"Epochs\")\n",
     "plt.ylabel(\"Loss\")\n",
