update on training code

--- a/script/Training.ipynb
+++ b/script/Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f9ae9e79-98a6-4a60-9477-63894df0a0d9",
    "metadata": {
     "tags": []
@@ -10,20 +10,21 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch import nn, optim\n",
+    "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "from torchvision import transforms\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from resnet50_mlp_fusion import SupCEResNet_Fusion  \n",
+    "import torchvision\n",
+    "from sklearn.metrics import roc_auc_score, average_precision_score, f1_score\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
+    "from torchvision.models import resnet18, ResNet18_Weights\n",
     "from train import train_model\n",
-    "from data_preprocessing import get_data_loaders\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from train import train_model\n",
-    "\n",
-    "# Device configuration\n",
-    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "from data_preprocessing import prepare_dataset, BIOMARKER_COLUMNS_BINARY, CONTINUOUS_COLUMNS\n",
+    "from resnet50_mlp_fusion import SupCEResNet_Fusion "
    ]
   },
   {
@@ -69,40 +70,53 @@
     }
    ],
    "source": [
-    "# Define model\n",
-    "model = SupCEResNet_Fusion(\n",
-    "    name='resnet50',\n",
-    "    num_classes=1,  # Regression or binary classification\n",
-    "    num_features=14,  # Number of biomarkers\n",
-    "    in_channels=3  # RGB images\n",
-    ").to(DEVICE)\n",
+    "# Main Execution\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Configuration\n",
+    "    BATCH_SIZE = 32\n",
+    "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    NUM_CLASSES = 1  # Regression or binary classification\n",
+    "    NUM_FEATURES = 14  # Number of biomarkers\n",
+    "    IN_CHANNELS = 3  # RGB images\n",
+    "    NUM_EPOCHS = 25\n",
     "\n",
-    "# Define the criterion and optimizer\n",
-    "criterion = nn.MSELoss()  # Use MSELoss for regression tasks\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
-    "train_loader, test_loader, val_loader = get_data_loaders()\n",
-    "# Train the model\n",
-    "train_losses, test_losses = train_model(\n",
-    "    model=model,\n",
-    "    train_loader=train_loader,\n",
-    "    test_loader=test_loader,\n",
-    "    criterion=criterion,\n",
-    "    optimizer=optimizer,\n",
-    "    device=DEVICE,\n",
-    "    epochs=25\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "987a2ec9-1f07-4e35-99d9-ce6896e828de",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "torch.save(model, \"resnet50.pth\")"
+    "    # Data Paths\n",
+    "    DATA_PATH = '/storage/ice1/shared/d-pace_community/makerspace-datasets/MEDICAL/OLIVES/OLIVES/'\n",
+    "    LABEL_DATA_PATH = 'OLIVES_Dataset_Labels/full_labels/Biomarker_Clinical_Data_Images.csv'\n",
+    "\n",
+    "    # Initialize the model\n",
+    "    model = SupCEResNet_Fusion(\n",
+    "        name='resnet50',\n",
+    "        num_classes=2,  # Regression or binary classification\n",
+    "        num_features=NUM_FEATURES,  # Number of biomarkers\n",
+    "        in_channels=IN_CHANNELS  # RGB images\n",
+    "    ).to(DEVICE)\n",
+    "\n",
+    "        # Prepare DataLoaders\n",
+    "    train_loader, val_loader, test_loader = prepare_dataset(\n",
+    "        csv_path=LABEL_DATA_PATH,\n",
+    "        image_root=DATA_PATH,\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        binary_cols=BIOMARKER_COLUMNS_BINARY,\n",
+    "        continuous_cols=CONTINUOUS_COLUMNS,\n",
+    "        image_mode=\"RGB\"\n",
+    "    )\n",
+    "    \n",
+    "    # Define the criterion and optimizer\n",
+    "    criterion = nn.MSELoss()  # Use MSELoss for regression tasks\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
+    "\n",
+    "    # Train the model\n",
+    "    train_losses, val_losses, all_metrics = train_model(\n",
+    "        model=model,\n",
+    "        train_loader=train_loader,\n",
+    "        val_loader=val_loader,\n",
+    "        criterion=criterion,\n",
+    "        optimizer=optimizer,\n",
+    "        device=DEVICE,\n",
+    "        epochs=NUM_EPOCHS,\n",
+    "        save_path='best_model.pth' #change to model path name\n",
+    "    )"
    ]
   },
   {
